# sfml_game_template

./: .clang-tidy  .gitignore  CMakeLists.txt  readme.md
src/: Clock.cpp  Input.cpp  Renderer.cpp  main.cpp
src/core/: Clock.h  Input.h  Renderer.h
